# numeric-type-quad

./: .gitignore  .gitmodules  CMakeLists.txt  compile.sh  install_extern.sh
cmake/: numeric-type-quadConfig.cmake.in
include/: pi.h  type_double_double.h  type_float128_boost.h  type_int128.h
test/: test_type.cpp
